@@ -1,3 +1,8 @@
+2003-05-21  Scott S. Goodwin  <scott@scottg.net>
+
+        * nsopenssl.h, nsopenssl.c: Added C API for setting SSL context
+          structure values.
+
 2003-05-19  Scott S. Goodwin  <scott@scottg.net>
 
         * nsopenssl.h, nsopenssl.c, init.c, config.h: Added
